--- a/src/main/resources/application_mockup.properties
+++ b/src/main/resources/application_mockup.properties
@@ -1,7 +1,15 @@
 # Sample application.properties file, customise accordingly
-spring.application.name=SpringBoot_Observability_DashBoard
-server.port=9595
 
+# =========================
+# General Settings
+# =========================
+spring.application.name=Spring_Kafka_Job_Scheduler
+server.port=9595
+spring.main.allow-bean-definition-overriding=true
+
+# =========================
+# Postgres Datasource
+# =========================
 spring.datasource.url=jdbc:postgresql://localhost:5432/<your_db_name>
 spring.datasource.username=<your_db_username>
 spring.datasource.password=<your_db_password>
@@ -9,8 +17,40 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
-management.endpoint.prometheus.access=UNRESTRICTED
+# =========================
+# Logging & Metrics 
+# =========================
+logging.level.org.springframework=info 
+logging.level.souradippatra.SpringBoot_Observability_DashBoard=debug 
 
-management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=health,info,metrics,prometheus 
+management.endpoint.prometheus.access=UNRESTRICTED 
+management.endpoint.health.show-details=always 
+management.tracing.sampling.probability=1.0 
 management.otlp.tracing.endpoint=http://localhost:7075
+
+# ===========================
+# Kafka Configuration
+# ===========================
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=job_scheduler_group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# ===========================
+# Quartz Scheduler Configuration
+# ===========================
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.quartz.properties.org.quartz.scheduler.instanceName=SpringKafkaScheduler
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=20000
+
+# Custom application property
+job.scheduler.kafka.topic=spring_jobs
